--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,5 +1,8 @@
 steps:
-  - label: ":git: Check tags"
+  - label: ":git: log"
     command:
-      - git log --decorate HEAD^^...HEAD
+      - git log --decorate $BUILDKITE_COMMIT
+
+  - label: ":git: tag"
+    command:
       - git tag
